# openai-practice

./: README.md  pyproject.toml
hello_world/: main.py
simple/: __init__.py  main.py  notes.txt
tests/: test_main.py
