[tool.poetry]
name = "hello-world"
version = "0.1.0"
description = "Simple Hello World project."
authors = ["OpenAI <support@openai.com>"]
readme = "README.md"
packages = [{ include = "hello_world" }]

[tool.poetry.dependencies]
python = "^3.12"
openai = "^2.7.1"
python-dotenv = "^1.0.0"

[tool.poetry.scripts]
hello-world = "hello_world.main:main"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
